--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -19,6 +19,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfU_M1JL1ZqH4QMhd3OALLgjBC8l2tAdw&callback=initMap"></script>
+
     <title>React App</title>
   </head>
   <body>
